# IT_Mentor_Tennis_Match_Scoreboard

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  bd.mwb  bd.mwb.bak  config.py  database.py  docker-compose.yaml  main.py  nginx.conf  pyproject.toml  server.py
alembic/: env.py
alembic/versions/: 49f1125067d9_init_mathes_players.py  bf20ac0fdea0_init_mathes_players.py
src/: errors.py  response.py  roter.py
src/controller/: controller_base.py  controller_main.py  controller_match_new.py  controller_match_score.py  controller_matches.py
src/dao/matches/: model.py  repository.py
src/dao/players/: model.py  repository.py
src/dto/: dto_error.py  dto_match.py  dto_matches.py  dto_player.py
src/roters/: roter.py
src/service/: service_mathes.py
src/static/: index.html  match-score.html
src/utils/: exception_handlers.py
src/view/: render.py
src/view/errors/: input_error.html  match-score-error.html
src/view/static/: index.html  new-match.html
src/view/static/css/: style.css
src/view/static/js/: app.js
src/view/templates/: error.html  match-score.html  matches.html  new-match.html  winner.html
src/view/templates/css/: style.css
tests/: test_hidden.py  test_render_score.py  test_server.py
