[project]
name = "4-tennis-match-scoreboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "mysqlclient>=2.2.8",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "result>=0.17.0",
    "sqlalchemy>=2.0.46",
]
